kubernetes/postgresql.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sreview-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sreview-database
  serviceName: "sreview-database"
  template:
    metadata:
      labels:
        app: sreview-database
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: "postgresdata"
      volumes:
      - name: "postgresdata"
        persistentVolumeClaim:
          claimName: "postgresdata"
---
apiVersion: v1
kind: Service
metadata:
  name: sreview-database
  labels:
    app: sreview-database
spec:
  ports:
  - port: 5432
    name: postgresql
  clusterIP: None
  selector:
    app: sreview-database
