kubernetes/master.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sreview-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: sreview.example.com
    http:
      paths:
      - path: 
        backend:
          serviceName: sreview-web
          servicePort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sreview-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sreview-web
  template:
    metadata:
      labels:
        app: sreview-web
    spec:
      containers:
      - name: web
        image: registry.salsa.debian.org/debconf-video-team/sreview/web:main
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sreview-web
spec:
  type: NodePort
  selector:
    app: sreview-web
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sreview-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sreview-master
  template:
    metadata:
      labels:
        app: sreview-master
    spec:
      serviceAccountName: sreview-master
      containers:
      - name: master
        image: registry.salsa.debian.org/debconf-video-team/sreview/master-kube:main
        imagePullPolicy: Always
